--- a/AR_test_2/three.js/examples/dev.html
+++ b/AR_test_2/three.js/examples/dev.html
@@ -32,7 +32,7 @@
 	//////////////////////////////////////////////////////////////////////////////////
 	//		Init
 	//////////////////////////////////////////////////////////////////////////////////
-
+	var mesh = new THREE.Mesh();
 	// init renderer
 	var renderer	= new THREE.WebGLRenderer({
 		// antialias	: true,
