--- a/AR_test_2/three.js/examples/DJ_A.html
+++ b/AR_test_2/three.js/examples/DJ_A.html
@@ -126,7 +126,7 @@
 		// barcodeValue: 5,
 		
 		type : 'pattern',
-		patternUrl : '../../data/multimarkers/multi-abcdef/patt.logo',
+		patternUrl : '../../data/multimarkers/multi-abcdef/patt.patt.tb',
 	})
 	// build a smoothedControls
 	var smoothedRoot = new THREE.Group()
