--- a/AR_test_2/three.js/examples/DJ_A.html
+++ b/AR_test_2/three.js/examples/DJ_A.html
@@ -126,7 +126,7 @@
 		// barcodeValue: 5,
 		
 		type : 'pattern',
-		patternUrl : '../../data/multimarkers/multi-abcdef/patt.patt.tb',
+		patternUrl : '../../data/multimarkers/multi-abcdef/patt.tb',
 	})
 	// build a smoothedControls
 	var smoothedRoot = new THREE.Group()
@@ -211,12 +211,12 @@
 	var onError = function ( xhr ) { };
 	THREE.Loader.Handlers.add( /\.dds$/i, new THREE.DDSLoader() );
 	var mtlLoader = new THREE.MTLLoader();
-	mtlLoader.setPath( 'models/DJ_A/' );
+	mtlLoader.setPath( 'models/DJ_obj_2/' );
 	mtlLoader.load( 'DJ2.mtl', function( materials ) {
 		materials.preload();
 		var objLoader = new THREE.OBJLoader();
 		objLoader.setMaterials( materials );
-		objLoader.setPath( 'models/DJ_A/' );
+		objLoader.setPath( 'models/DJ_obj_2/' );
 		objLoader.load( 'DJ2.obj', function ( object ) {
 			//object.position.y = 0.2;
   			// 缩放
